# Max-V1

./: .gitignore  .gitmodules  LICENSE  pyproject.toml
b2d_bridge/: __init__.py  autopilot.py  max_server.py
configs/: max_config.json
models/max_v1/: config.py  max_callback.py  max_carla.py  prompt_template.py  register_max.py
scripts/: get_data.sh  kill_eval.sh  run_b2d_eval.sh  run_max_server.sh  run_open_loop.sh  setup.sh  sft.sh  sft_rollout.sh  train.sh  train_dist.sh
tools/: eval_open_loop.py  prepare_data.py
